--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,12 @@ a {
    opacity: 0.6;
    z-index: -1;
 }
+.hero {
+   max-width: 1100px;
+   margin: 0 auto;
+   padding: 0 50px;
+   justify-content: flex-start;
+}
 #hero h1{
    display: block;
    width: fit-content;
@@ -51,6 +57,7 @@ a {
    animation-delay: 2.5s;
 }
 #hero h1:nth-child(3){
+   animation: text_revel_name .5s ease forwards;
    animation-delay: 3.5s;
 }
 #hero h1 span{
@@ -110,9 +117,15 @@ a {
       color: blueviolet;
    }
 }
+@keyframes text_revel_name {
+   100%{
+      color: rgb(1, 144, 154);
+   }
+}
 @keyframes button_revel {
    100%{
       opacity: 1;
    }
 }
+
 /*end of keyframes*/
