--- a/style.css
+++ b/style.css
@@ -9,16 +9,16 @@ body {
   background-color: white;
   margin: 0;
 }
+
 /* hero section */
 #hero {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
-/*header design*/
+/* header design */
 
 #navbar {
   background-color: white;
@@ -43,18 +43,18 @@ body {
 }
 
 #navbar i {
-  color: #28352F;
+  color: #28352f;
   font-size: 18px;
   transition: all 0.1s;
 }
 
-#navbar i:hover{
+#navbar i:hover {
   color: rgb(57, 85, 178);
   font-size: 28px;
   transition: all 0.1s;
 }
 
-/*banner design*/
+/* banner design */
 
 .banner {
   width: 100vw;
@@ -82,17 +82,17 @@ body {
 }
 
 .title .self {
-  color:#172B4D;
+  color: #172b4d;
 }
 
 .title .profession {
-  color: #36B37E
+  color: #36b37e;
 }
 
 .info {
   width: 327px;
   height: 164px;
-  color: #172B4D;
+  color: #172b4d;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -101,6 +101,7 @@ body {
   text-align: center;
   margin-top: 15px;
 }
+
 /* social media icon */
 
 .social {
@@ -113,21 +114,25 @@ body {
   height: 19.58px;
   margin: 9.51px;
 }
+
 .linkedin {
   width: 20px;
   height: 19.62px;
   margin: 9.51px;
 }
+
 .medium {
   width: 20px;
   height: 15.69px;
   margin: 9.51px;
 }
+
 .github {
   width: 17.99px;
   height: 19.62px;
   margin: 9.51px;
 }
+
 .angellist {
   width: 14.17px;
   height: 19.62px;
@@ -147,8 +152,8 @@ body {
 .chevron {
   width: 40px;
   height: 40px;
-  background: #FFFFFF;
-  border: 1px solid #DFE1E6;
+  background: #fff;
+  border: 1px solid #dfe1e6;
   border-radius: 32px;
   display: flex;
   flex-direction: row;
