--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -70,6 +71,14 @@ body {
   align-items: center;
 }
 
+.introduction {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
 .title {
   width: 327px;
   height: 211px;
@@ -108,9 +117,16 @@ body {
 
 /* social media icon */
 
+.social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .social ul {
   display: flex;
   justify-content: center;
+  margin-top: 15px;
 }
 
 .social ul li {
@@ -118,34 +134,36 @@ body {
 }
 
 .twitter {
-  width: 19.58px;
-  height: 19.58px;
+  width: 21.58px;
+  height: 21.58px;
   margin: 9.51px;
 }
 
 .linkedin {
-  width: 20px;
-  height: 19.62px;
+  width: 22px;
+  height: 21.62px;
   margin: 9.51px;
 }
 
 .medium {
-  width: 20px;
-  height: 15.69px;
+  width: 22px;
+  height: 17.69px;
   margin: 9.51px;
   margin-top: 13.51px;
 }
 
 .github {
-  width: 17.99px;
-  height: 19.62px;
+  width: 19.99px;
+  height: 21.62px;
   margin: 9.51px;
+  margin-top: 10.51px;
 }
 
 .angellist {
-  width: 14.17px;
-  height: 19.62px;
+  width: 16.17px;
+  height: 21.62px;
   margin: 9.51px;
+  margin-top: 10.51px;;
 }
 
 /* drop-down button */
