--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 body {
   background-color: white;
   margin: 0;
+  display: grid;
+  grid-template-columns: auto;
 }
 
 /* hero section */
@@ -185,4 +187,37 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+/* work section title */
+
+.showcase-title {
+  width: 100vw;
+  height: 125px;
+  margin-top: 63px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:center;
+}
+
+.title-box {
+  text-align: center;
+  width: 327px;
+}
+
+.showcase-title h2 {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  color: #172B4D
+}
+
+.separator {
+  width: 48px;
+height: 4px;
+background: #36B37E;
+border-radius: 24px;
 }
