--- a/style.css
+++ b/style.css
@@ -221,3 +221,93 @@ height: 4px;
 background: #36B37E;
 border-radius: 24px;
 }
+
+#worksection {
+  margin-top: 62px;
+  display: grid;
+  grid-template-columns: auto;
+  row-gap: 24px;
+  justify-content: center;
+}
+
+/* word section */
+
+/* card design */
+
+.card {
+  width: 327px;
+  height: 474px;
+  background: #EBF0EE;
+  border: 1px solid #D0D9D4;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.card .card-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 222px;
+  background-color: #ffffff;
+  border-radius: 8px;
+}
+
+.card-info h3 {
+  width: 295px;
+  height: 57px;
+  font-family: 'Inter', sans-serif;
+  color: #3A4A42;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+}
+
+.card-info ul {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
+}
+
+.card-info ul li {
+  list-style-type: none;
+  padding: 8px 12px;
+  background-color: #EBF0EE;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #3A4A42;
+  border-radius: 3px;
+}
+
+.card-info .btnbar {
+  width: 305px;
+  height: 69px;
+}
+
+.card-info .btnbar a {
+  text-decoration: none;
+  display: block;
+  width: 122px;
+  height: 48px;
+  text-align: center;
+  background-color: #36B37F;
+  padding: 12px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  color: #ffffff;
+  border-radius: 4px;
+  margin: 13px 92px 8px;
+}
