--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   display: grid;
   grid-template-columns: auto;
+  justify-content: center;
 }
 
 /* hero section */
@@ -198,7 +199,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
 }
 
 .title-box {
@@ -212,14 +213,14 @@ body {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
-  color: #172B4D
+  color: #172b4d;
 }
 
 .separator {
   width: 48px;
-height: 4px;
-background: #36B37E;
-border-radius: 24px;
+  height: 4px;
+  background: #36b37e;
+  border-radius: 24px;
 }
 
 #worksection {
@@ -237,8 +238,8 @@ border-radius: 24px;
 .card {
   width: 327px;
   height: 474px;
-  background: #EBF0EE;
-  border: 1px solid #D0D9D4;
+  background: #ebf0ee;
+  border: 1px solid #d0d9d4;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -252,7 +253,7 @@ border-radius: 24px;
   justify-content: space-evenly;
   width: 100%;
   height: 222px;
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 8px;
 }
 
@@ -260,7 +261,7 @@ border-radius: 24px;
   width: 295px;
   height: 57px;
   font-family: 'Inter', sans-serif;
-  color: #3A4A42;
+  color: #3a4a42;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
@@ -278,14 +279,14 @@ border-radius: 24px;
 .card-info ul li {
   list-style-type: none;
   padding: 8px 12px;
-  background-color: #EBF0EE;
-  font-family: 'Inter';
+  background-color: #ebf0ee;
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #3A4A42;
+  color: #3a4a42;
   border-radius: 3px;
 }
 
@@ -300,14 +301,14 @@ border-radius: 24px;
   width: 122px;
   height: 48px;
   text-align: center;
-  background-color: #36B37F;
+  background-color: #36b37f;
   padding: 12px;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
-  color: #ffffff;
+  color: #fff;
   border-radius: 4px;
   margin: 13px 92px 8px;
 }
@@ -316,3 +317,165 @@ border-radius: 24px;
   background-color: #008552;
 }
 
+/* About me section */
+
+#aboutme {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.aboutwrapper {
+  width: 375px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.aboutbox {
+  margin-top: 64px;
+  width: 351px;
+  height: 338px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 59px;
+}
+
+.about-title {
+  width: 351px;
+  height: 48px;
+  text-align: center;
+}
+
+.about-title h2 {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 52px;
+  color: #172b4d;
+}
+
+.descrip {
+  width: 351px;
+  height: 194px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 32px;
+  text-align: center;
+  color: #42526e;
+}
+
+#aboutme .resumebtn a {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  background: #36b37f;
+  border-radius: 4px;
+  padding: 12px;
+}
+
+#aboutme .resumebtn a:active {
+  background-color: #008552;
+}
+
+.top-img {
+  position: absolute;
+  right: 0;
+  top: 5px;
+}
+
+.bottom-img {
+  position: absolute;
+  left: 0;
+  top: 340px;
+}
+
+.aboutwrapper .skill-card {
+  width: 327px;
+  height: 316px;
+  background-color: #ebf0ee;
+  border: 1px solid #c1c7d0;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  margin-bottom: 24px;
+}
+
+.icon-box {
+  width: 327px;
+  height: 128px;
+  margin-top: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-box .icon {
+  background-color: #fff;
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  box-shadow: 0 16px 24px rgba(37, 47, 137, 0.08);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tagbox {
+  width: 327px;
+  height: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.tagbox h4 {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: center;
+  color: #344563;
+  margin-bottom: 24px;
+}
+
+.tagbox ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tagbox ul li {
+  list-style-type: none;
+  margin: 4px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #36b37e;
+  background-color: #fff;
+  padding: 12px;
+  text-align: center;
+  border-radius: 8px;
+}
